[package]
name = "claimer_rs_full"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde","clock"] }
chrono-tz = "0.10.3"
time = "0.3"
anyhow = "1.0"
once_cell = "1.21.3"
utilities = "0.0.0"
reqwest = { version = "0.12.15",  default-features = false ,features = ["json","rustls-tls"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"]}
rand = "0.9.1"
tokio = {version ="1.44.2", features = ["full"]}
futures = "0.3.31"
rusqlite = {version ="0.32.0", features = ["bundled", "chrono"] }
num_cpus = "1.16.0"
parking_lot = "0.12.3"
rand_chacha = "0.9.0"
rayon = "1.10.0"
ahash = "0.8.12"
dashmap = "6.1.0"
